--- a/views/home/planos.handlebars
+++ b/views/home/planos.handlebars
@@ -70,7 +70,15 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    {{#if User}}
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
+                    {{else}}
+                        <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
@@ -84,7 +92,15 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    {{#if User}}
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
+                    {{else}}
+                        <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
@@ -98,7 +114,15 @@
                     <p class="card-text font-weight-bold">Data plan per day</p>
                     <p class="card-text font-weight-bold">Number of devices</p>
                     <p class="card-text font-weight-bold">Battery life</p>
-                    <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                    {{#if User}}
+                        {{#if User.confirme}}
+                            <a href="/booking" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{else}}
+                            <a href="/users/{{User.id}}" class="btn btn-primary site-cor">{{translation.ONLINE_BOOKING}}</a>
+                        {{/if}}
+                    {{else}}
+                        <a class="btn btn-primary site-cor wifi-text-white"   data-toggle="modal" data-target="#login">{{translation.ONLINE_BOOKING}}</a>
+                    {{/if}}
                 </div>
             </div>
         </div>
