--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -33,8 +33,8 @@
                 <div class="col-md-2 fcontato">{{translation.CONTATOS}} </div>
                 <div class="col-md-10 cc">
                     <ul>
-                        <li><a href="tel:002380000000">(+238) 000 00 00</a></li>
-                        <li><a href="mailto:contact@wifianywhere.com">contact@wifianywhere.com</a></li>
+                        <li><a href="tel:00238{{Contato.0.phone}}">(+238) {{Contato.0.phone}}</a></li>
+                        <li><a href="mailto:{{Contato.0.email}}">{{Contato.0.email}}</a></li>
                     </ul>
                 </div>
             </div>
