--- a/views/partials/_login.handlebars
+++ b/views/partials/_login.handlebars
@@ -33,16 +33,16 @@
                                 <input type="password" name="password" placeholder="Enter Password" name="password" required>
                                 <div class="mb-3">
                                     <label>
-                                    <input type="checkbox" checked="checked" name="remember"> Remember me
+                                    <input type="checkbox" checked="checked" name="remember"> {{translation.Remember_me}}
                                     </label>
                                     <label id="forgot">
-                                        <a href="/auth/resetSenha">Esqueceu a senha?</a>
+                                        <a href="/auth/resetSenha">{{translation.Esqueceu_a_senha?}}</a>
                                     </label>
                                 </div>
                                 <div class="row mb-3">
                                     <div class="col-md-6">
                                       {{!-- <input  class="btn btn-outline-warning terras" type="reset" value="cancelar"> --}}
-                                      <input type="reset" class="btn btn-outline-warning terras" data-dismiss="modal" value="Close">
+                                      <input type="reset" class="btn btn-outline-warning terras" data-dismiss="modal" value="{{translation.Close}}">
                                     </div>
                                     <div class="col-md-6">
                                       <input class="btn btn-success terra" type="submit" value="{{translation.ENTRAR}}">
@@ -53,49 +53,50 @@
                             </form>
                         </div>
                 </div>
+
                 <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                     <form method="POST" action="/auth/registro">
                         <div class="container">
-                            <h1>Sign Up</h1>
-                            <p>Please fill in this form to create an account.</p>
+                            <h1>{{translation.Sign_up}}</h1>
+                            <p>{{translation.PleaseFillAccount}}.</p>
                             <hr>
 
                             <div class="form-row">
                                 <div class="col">
-                                    <label for="firstName"><b>Nome</b></label>
+                                    <label for="firstName"><b>{{translation.Nome}}</b></label>
                                     <input type="text" class="form-control agua" placeholder="First name" name="firstName">
                                 </div>
                                 <div class="col">
-                                    <label for="lastName"><b>Apelido</b></label>
+                                    <label for="lastName"><b>{{translation.Apelido}}</b></label>
                                     <input type="text" class="form-control agua" placeholder="Last name" name="lastName">
                                 </div>
                             </div>
 
-                            <label for="email"><b>Email</b></label>
+                            <label for="email"><b>{{translation.Email}}</b></label>
                             <input type="text" placeholder="Enter Email" name="email" required>
 
-                            <label for="psw"><b>Password</b></label>
+                            <label for="psw"><b>{{translation.Password}}</b></label>
                             <input type="password" placeholder="Enter Password" name="password" required>
 
-                            <label for="psw-repeat"><b>Repeat Password</b></label>
+                            <label for="psw-repeat"><b>{{translation.RepeatPassword}}</b></label>
                             <input type="password" placeholder="Repeat Password" name="repass" required>
 
                             {{!-- <label>
                                 <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
                             </label> --}}
 
-                            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue; text-decoration:underline;">Terms & Privacy</a>.</p>
+                            <p>{{translation.ByCreatingAccount}}<a href="#" style="color:dodgerblue; text-decoration:underline;"> {{translation.TermsPrivacy}}</a>.</p>
 
                             <div class="clearfix mb-3">
                                 <div class="row">
                                     <div class="col-md-6">
                                         {{!-- <button type="button" class=" btn-danger cancel">Cancel</button> --}}
                                         {{!-- <input class="terras btn btn-outline-warning" type="reset" value="cancelar"> --}}
-                                        <input type="reset" class="terras btn btn-outline-warning" data-dismiss="modal" value="Close">
+                                        <input type="reset" class="terras btn btn-outline-warning" data-dismiss="modal" value="{{translation.Close}}">
                                     </div>
                                     <div class="col-md-6">
                                         {{!-- <button type="submit" class="signupbtn">Sign Up</button> --}}
-                                        <input type="submit" class="btn btn-success terra" value="Registrar">
+                                        <input type="submit" class="btn btn-success terra" value="{{translation.Sign_up}}">
                                     </div>
                                 </div>
                             </div>
