add search on faqs & fix login styles

--- a/views/home/faq.handlebars
+++ b/views/home/faq.handlebars
@@ -3,15 +3,15 @@
     <img src="/images/Imagem 2.png" class="img-fluid banner" alt="Responsive image">
     <div class="centered h5 font-weight-bold">
         <span>{{translation.FAKQ}}</span>
-        <form action="" method="POST">
-            <input type="text" placeholder="Type your question...">
+        <form action="/faq/pesquisa" method="POST">
+            <input type="text" placeholder="Type your question..." name="search">
         </form>
     </div>
 </div>
 
 
 <section id="categoria"  class="container-fluid">
-    <div class="row">
+    <div class="row"> 
         <div class="col-md-2 col-sm-4">
             <div class="row text-center mt-4">
                 <div class="col-12">
