reset passzor sem recaptcha

--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -43,7 +43,7 @@
             <div id="a" class="row rsocial ">
                 {{#each Rsocial}}
                     {{!-- {{this.nome}} --}}
-                    <div class="col-md social"><a href="{{this.link}}"><i class="{{this.icon}}"></i></a></div>
+                    <div class="col-md social"><a href="{{this.link}}"  target="_blank"><i class="{{this.icon}}"></i></a></div>
                 {{/each}}
                 {{!-- <div class="col-md social"><a href="#"><i class="fab fa-instagram"></i></a></div>
                 <div class="col-md social"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
