--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
 
     <!-- Required meta tags -->
@@ -36,9 +36,6 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script><!--
     <script src="/bower_components/popper.js/dist/popper.js"></script>-->
     <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/js/site.js"></script>
-    <script src="/js/faq.js"></script>
-    <script src="/js/dash.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.js"></script>
@@ -47,5 +44,10 @@
     {{!-- <script src="/bower_components/datatables.net-responsive-dt/js/responsive.dataTables.min.js"></script> --}}
     <script src="/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
     <script src="/bower_components/datatables.net-select/js/dataTables.select.min.js"></script>
+
+    {{!-- my scripts --}}
+    <script src="/js/site.js"></script>
+    <script src="/js/faq.js"></script>
+    <script src="/js/dash.js"></script>
 </body>
 </html>
