--- a/views/layouts/resetsenha.handlebars
+++ b/views/layouts/resetsenha.handlebars
@@ -32,7 +32,7 @@
 
     {{{body}}}
 
-    {{>_chat}}
+    {{!-- {{>_chat}} --}}
 
     <script src="/bower_components/jquery/dist/jquery.js"></script><!--
     <script src="/bower_components/popper.js/dist/popper.js"></script>-->
