--- a/views/layouts/resetsenha.handlebars
+++ b/views/layouts/resetsenha.handlebars
@@ -30,7 +30,13 @@
 </head>
 <body class="resetbody">
 
+    {{>_navbars}}
+
     {{{body}}}
+
+    {{!-- {{>_footer}} --}}
+
+    {{>_login}}
 
     {{!-- {{>_chat}} --}}
 
