teste com qrcode done

--- a/views/home/teste.handlebars
+++ b/views/home/teste.handlebars
@@ -1,1 +1,11 @@
-teste
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+    Autem eveniet obcaecati <br>
+    consequatur ad facilis laborum error unde, <br>
+    harum fugit eos ea exercitationem accusamus <br>
+    aliquam voluptas quidem officia blanditiis asperiores nostrum!<br>
+</p>
+
+<center>
+    <img src="/i_love_qr.svg" width="400" height="400">
+</center>
