--- a/views/booking/booking.handlebars
+++ b/views/booking/booking.handlebars
@@ -42,18 +42,18 @@
                             <label for="inputLocation">{{translation.CPU_LOC}}</label>
                             <select id="inputLocation" name="plocation" class="form-control">
                                 <option selected>Select</option>
-                                <option value="1">Aeroporto Nelson Mandela (praia)</option>
-                                <option value="2">TerraSystem (Latata)</option>
-                                <option value="2">Singapura (Sao Pedro)</option>
+                                {{#each Place}}
+                                    <option value="{{this.id}}">{{this.nome}}</option>
+                                {{/each}}
                             </select>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="inputreturnlocation">{{translation.CR_LOC}}</label>
                             <select id="inputLocation" name="rlocation" class="form-control">
                                 <option selected>Select</option>
-                                <option value="1">Aeroporto Nelson Mandela (praia)</option>
-                                <option value="2">TerraSystem (Latata)</option>
-                                <option value="2">Singapura (Sao Pedro)</option>
+                                {{#each Place}}
+                                    <option value="{{this.id}}">{{this.nome}}</option>
+                                {{/each}}
                             </select>
                         </div>
                     </div>
