error na tabela bookind e associados

--- a/views/booking/pagamento.handlebars
+++ b/views/booking/pagamento.handlebars
@@ -21,7 +21,7 @@
 
     <div class="row">
          <div id="form-2" class="col-md-9">
-            <form action="/pagamento/pagamento_visa" method="POST">
+            <form action="/pagamento/pagamento_visa/{{book}}" method="POST">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputCardnumber">{{translation.CNumber}}</label>
