--- a/views/mail/index.handlebars
+++ b/views/mail/index.handlebars
@@ -37,27 +37,23 @@
     </style>
 </head>
 <body>
-    <hr>
-    <p>{{username}}</p>
-    <hr>
-    <p>{{pass}}</p>
     <h1>CONFIRMATION EMAIL</h1>
     <hr>
     <div class="container">
         <div class="a">
             <ul>
                 <li class="c">NAME</li>
-                <li class="d">-- -- --</li>
+                <li class="d">{{nome}} {{apelido}}</li>
                 <li class="c">PICK-UP DATE</li>
-                <li class="d">-- -- --</li>
+                <li class="d">{{pickupdate}}</li>
                 <li class="c">CHOOSEN PLAN</li>
-                <li class="d">-- -- --</li>
+                <li class="d">{{plano}}</li>
                 <li class="c">PHONE NUMBER</li>
-                <li class="d">(+238) 000 00 00</li>
+                <li class="d">{{phone}}</li>
                 <li class="c">PICK-UP LOCATION</li>
-                <li class="d">-- -- --</li>
+                <li class="d">{{picklocation}}</li>
                 <li class="c">DROP-OFF LOCATION</li>
-                <li class="d">-- -- --</li>
+                <li class="d">{{droplocation}}</li>
                 <li class="c">TOTAL PRICE</li>
                 <li class="d">00 00 00 $00</li>
         </div>
