--- a/views/mail/index.handlebars
+++ b/views/mail/index.handlebars
@@ -55,7 +55,7 @@
                 <li class="c">DROP-OFF LOCATION</li>
                 <li class="d">{{droplocation}}</li>
                 <li class="c">TOTAL PRICE</li>
-                <li class="d">00 00 00 $00</li>
+                <li class="d">{{preco}} $00</li>
         </div>
         <div class="b">
             <img src="{{qrcode}}" width="400" height="400">
